fix body overflow scrollbar

--- a/components/core/layout/footer.module.scss
+++ b/components/core/layout/footer.module.scss
@@ -8,6 +8,7 @@
   background-color: transparent;
   text-transform: capitalize;
   border-top: 1px solid black;
+  padding: 2em;
 
   .Wrapper {
     width: calc(100% - 48px);
